--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html {
   -webkit-text-size-adjust: none;
 }
 body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; }
-body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
+body, button, input, select, textarea { font-family: Tahoma, Geneva, sans-serif, sans-serif; color: #333; }
 
 a { color: #12C; }
 a:visited { color: #61C; }
@@ -16,7 +16,7 @@ a:hover, a:active { color: #c00; outline: 0; }
 b, strong { font-weight: bold; }
 pre, code { font-family: monospace, monospace; font-size: 1em; }
 ul, ol { margin: 1em 0; padding: 0 0 0 20px; }
-img { border: 0; max-width: 100%; }
+img { border: 0; max-width: 100px; }
 
 body { background: #fff; }
 header, footer, .container { max-width: 45em; margin: 0 auto; }
