--- a/views/css/style.css
+++ b/views/css/style.css
@@ -33,11 +33,16 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
+  will-change: transform;
+  transform: translateZ(0);
 }
 
 .randomPizzaContainer {
   float: left;
   display: flex;
+  will-change: transform;
+  transform: translateZ(0);
+
 }
 
 .randomPizzaContainer:after {
