Add viewport and other meta tags

--- a/views/pizza.html
+++ b/views/pizza.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Udacity mobile portfolio pizza page">
+    <meta name="author" content="Steve Cooper">
+    <title>Udacity Pizzeria</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
