--- a/src/views/pizza.html
+++ b/src/views/pizza.html
@@ -143,6 +143,7 @@
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
   </div>
   <script type="text/javascript" src="js/main.js"></script>
+  <script defter type="text/javascript" src="js/heavy.js"></script>
 </body>
 
 </html>
