--- a/src/views/pizza.html
+++ b/src/views/pizza.html
@@ -41,7 +41,10 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="images/pizzaria-large.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+        <picture>
+          <source media="(min-width:427px)" srcset="images/pizzaria-large.jpg">
+          <img src="images/pizzaria-small.jpg" class="img-responsive"> 
+        </picture><!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -107,11 +110,11 @@
           </div>
         </div>
         <div id="randomPizzas" class="row">
-          <div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
-            <div style="width:35%">
+          <div id="pizza0" class="randomPizzaContainer">
+            <div class="randomPizzaImg">
               <img src="images/pizza.png" class="img-responsive">
             </div>
-            <div style="width:65%">
+            <div class="randomPizzaDesc">
               <h4>The Udacity Special</h4>
               <ul>
                 <li>Turkey</li>
@@ -124,11 +127,11 @@
               </ul>
             </div>
           </div>
-          <div id="pizza1" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
-            <div style="width:35%">
+          <div id="pizza1" class="randomPizzaContainer">
+            <div class="randomPizzaImg">
               <img src="images/pizza.png" class="img-responsive">
             </div>
-            <div style="width:65%">
+            <div class="randomPizzaDesc">
               <h4>The Cameron Special</h4>
               <ul>
                 <li>Chicken</li>
@@ -143,7 +146,7 @@
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
   </div>
   <script type="text/javascript" src="js/main.js"></script>
-  <script defter type="text/javascript" src="js/heavy.js"></script>
+  <script type="text/javascript" src="js/heavy.js" defer></script>
 </body>
 
 </html>
