--- a/src/views/pizza.html
+++ b/src/views/pizza.html
@@ -145,8 +145,7 @@
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
   </div>
-  <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/heavy.js" defer></script>
+  <script type="text/javascript" src="js/main.js" defer></script>
 </body>
 
 </html>
