--- a/views/pizza.html
+++ b/views/pizza.html
@@ -181,8 +181,7 @@ form {
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
   </div>
-  <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/heavy.js" defer></script>
+  <script type="text/javascript" src="js/main.js" defer></script>
 </body>
 
 </html>
